<resources>
    <string name="app_name">Diabetech</string>
    <string name="start">Diabetech</string>
    <string name="title_menu1">DETECT, PREVENT,</string>
    <string name="title_menu2">AVOID DIABETES</string>
    <string name="title_button">Lets Check it Now</string>
    <string name="diagnose">Diagnose</string>
    <string name="check_diabetes">Check Whether Diabetes or Not</string>
    <string name="blood_control">Blood Control</string>
    <string name="controlling_blood">Controlling Blood Sugar Levels</string>
    <string name="health_analysist">Daily Health Analysist</string>
    <string name="doctor_s_check">Doctor\'s Check</string>
    <string name="consultation">Consultation with a Doctor</string>
    <string name="profile">Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="title_appbar">Diagnose Diabetes</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="sleep">Sleep</string>
    <string name="physical_activity">Physical Activity</string>
    <string name="family_history_of_diabetes">Family History of Diabetes</string>
    <string name="pregnancies">Pregnancies</string>
    <string name="pregnancy_diabetes">Pregnancy Diabetes</string>
    <string name="smoking">Smoking</string>
    <string name="alcohol_consumption">Alcohol Consumption</string>
    <string name="regular_medicine">Regular Medicine</string>
    <string name="check">Check</string>
    <string name="diagnose_again">Diagnose Again</string>
    <string name="ok">OK</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="basic_subscription">Basic Subscription</string>
    <string name="feature_basic_1">Unlimeted Diagnose Diabetes</string>
    <string name="feature_basic_2">Trials Blood Control</string>
    <string name="feature_basic_3">Trials Daily Health Analysist</string>
    <string name="premium_subscription">Premium Subscription</string>
    <string name="feature_prem_1">All in Basic Supscription</string>
    <string name="feature_prem_2">Unlimited Blood Control</string>
    <string name="feature_prem_3">Unlimited Daily Health Analysist</string>
    <string name="basic_btn">Rp12.000/M</string>
    <string name="prem_btn">Rp39.000/M</string>
    <string name="vip_btn">Rp59.000/M</string>
    <string name="vip_subscription">Vip Subscription</string>
    <string name="feature_vip_1">All in Basic Subsription</string>
    <string name="feature_vip_2">All in Premium Subscription</string>
    <string name="feature_vip_3">Unlock Feature Doctor\'s Check</string>
    <string name="back">Back</string>
</resources>