<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/subscription_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_light_primary"
        android:padding="16dp"
        android:text="@string/subscriptions"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subscription_appbar"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/subs1"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            android:outlineSpotShadowColor="@color/black">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circle"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:src="@drawable/ic_basic" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/featureTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basic_subscription"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/feature11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/feature_basic_1"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/feature21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/feature_basic_2"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/feature31"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/feature_basic_3"
                    android:textAlignment="center" />

            </LinearLayout>

            <Button
                android:id="@+id/priceButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/red"
                android:text="@string/basic_btn"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/subs2"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            android:outlineSpotShadowColor="@color/black">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circle"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:src="@drawable/ic_premium" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/featureTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/premium_subscription"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/feature12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/feature_prem_1"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/feature22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/feature_prem_2"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/feature32"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/feature_prem_3"
                    android:textAlignment="center" />

            </LinearLayout>

            <Button
                android:id="@+id/priceButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/red"
                android:text="@string/prem_btn"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/subs3"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            android:outlineSpotShadowColor="@color/black">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circle"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:src="@drawable/ic_vip" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/featureTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vip_subscription"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/feature13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/feature_vip_1"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/feature23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/feature_vip_2"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/feature33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/feature_vip_3"
                    android:textAlignment="center" />

            </LinearLayout>

            <Button
                android:id="@+id/priceButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/red"
                android:text="@string/vip_btn"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/red"
            android:text="@string/back"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
